fix page text contrast ratio

--- a/markup/components/header/header.scss
+++ b/markup/components/header/header.scss
@@ -19,7 +19,7 @@ $links-size: 30px !default;
 
     &-pos {
         margin: 4px 0 0;
-        color: #99979c;
+        color: #4c4b4e;
 
         &:before {
             content: '//';
